force-app/main/default/objects/Vehicule__c/Vehicule__c.object-meta.xml
<CustomObject>
    <label>Véhicule</label>
    <nameField>
        <displayFormat>Véc-{00000}</displayFormat>
        <label>Numéro de véhicule</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Véhicules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>