force-app/main/default/objects/Vehicule__c/fields/AdversaireAssur__c.field-meta.xml
<CustomField>
    <fullName>AdversaireAssur__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Adversaire assuré</label>
    <type>Checkbox</type>
</CustomField>