force-app/main/default/objects/Vehicule__c/fields/AttestationNumber__c.field-meta.xml
<CustomField>
    <fullName>AttestationNumber__c</fullName>
    <label>Numéro d&apos;attestation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>