force-app/main/default/objects/Vehicule__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Marque</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Jaguar</fullName>
            </value>
            <value>
                <fullName>Hyundai</fullName>
            </value>
            <value>
                <fullName>Honda</fullName>
            </value>
            <value>
                <fullName>FORD</fullName>
            </value>
            <value>
                <fullName>Fiat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>