force-app/main/default/objects/Vehicule__c/fields/CompagnieAdverse__c.field-meta.xml
<CustomField>
    <fullName>CompagnieAdverse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compagnie adverse</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Véhicules</relationshipLabel>
    <relationshipName>Vehicules</relationshipName>
    <type>Lookup</type>
</CustomField>