force-app/main/default/objects/Vehicule__c/fields/CompagnieVehiculeAdversaire__c.field-meta.xml
<CustomField>
    <fullName>CompagnieVehiculeAdversaire__c</fullName>
    <label>Compagnie véhicule adversaire</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compagnie 1</fullName>
            </value>
            <value>
                <fullName>Compagnie 2</fullName>
            </value>
            <value>
                <fullName>Compagnie 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>