force-app/main/default/objects/Vehicule__c/fields/DateOfFirstRegistration__c.field-meta.xml
<CustomField>
    <fullName>DateOfFirstRegistration__c</fullName>
    <label>Date de mise en circulation</label>
    <type>Date</type>
</CustomField>