force-app/main/default/objects/Vehicule__c/fields/GlassValue__c.field-meta.xml
<CustomField>
    <fullName>GlassValue__c</fullName>
    <label>Val Glaces</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>