force-app/main/default/objects/Vehicule__c/fields/InsurancePolicy__c.field-meta.xml
<CustomField>
    <fullName>InsurancePolicy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Police d&apos;assurance</label>
    <referenceTo>InsurancePolicy__c</referenceTo>
    <relationshipLabel>Véhicules</relationshipLabel>
    <relationshipName>vehicle</relationshipName>
    <type>Lookup</type>
</CustomField>