force-app/main/default/objects/Vehicule__c/fields/isOpposingCar__c.field-meta.xml
<CustomField>
    <fullName>isOpposingCar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Voiture adverse ?</label>
    <type>Checkbox</type>
</CustomField>