force-app/main/default/objects/Vehicule__c/fields/MarketValue__c.field-meta.xml
<CustomField>
    <fullName>MarketValue__c</fullName>
    <label>Val Vénale</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>