force-app/main/default/objects/Vehicule__c/fields/ModelePicklist__c.field-meta.xml
<CustomField>
    <fullName>ModelePicklist__c</fullName>
    <label>Modèle</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Brand__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>E-Pace</fullName>
            </value>
            <value>
                <fullName>XE</fullName>
            </value>
            <value>
                <fullName>XF</fullName>
            </value>
            <value>
                <fullName>I-Pace (électrique)</fullName>
            </value>
            <value>
                <fullName>Santa Fe</fullName>
            </value>
            <value>
                <fullName>Bayon</fullName>
            </value>
            <value>
                <fullName>Ioniq 5</fullName>
            </value>
            <value>
                <fullName>Jazz</fullName>
            </value>
            <value>
                <fullName>ZR-V</fullName>
            </value>
            <value>
                <fullName>Fiesta</fullName>
            </value>
            <value>
                <fullName>Focus</fullName>
            </value>
            <value>
                <fullName>Mondeo</fullName>
            </value>
            <value>
                <fullName>Panda</fullName>
            </value>
            <value>
                <fullName>Tipo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>