force-app/main/default/objects/Vehicule__c/fields/NbDeContratDAssurance__c.field-meta.xml
<CustomField>
    <fullName>NbDeContratDAssurance__c</fullName>
    <label>N° de contrat d&apos;assurance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>