force-app/main/default/objects/Vehicule__c/fields/NbDePassagerBlesses__c.field-meta.xml
<CustomField>
    <fullName>NbDePassagerBlesses__c</fullName>
    <label>Nb de passager blessés</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>