force-app/main/default/objects/Vehicule__c/fields/NewValue__c.field-meta.xml
<CustomField>
    <fullName>NewValue__c</fullName>
    <label>Val à Neuf</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>