force-app/main/default/objects/Vehicule__c/fields/ProprietaireDuVehicule__c.field-meta.xml
<CustomField>
    <fullName>ProprietaireDuVehicule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Propriétaire du véhicule</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Véhicules (Propriétaire du véhicule)</relationshipLabel>
    <relationshipName>V_hicules</relationshipName>
    <type>Lookup</type>
</CustomField>