force-app/main/default/objects/Vehicule__c/fields/RegistrationNumber__c.field-meta.xml
<CustomField>
    <fullName>RegistrationNumber__c</fullName>
    <label>Numéro d&apos;immatriculation</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>