force-app/main/default/objects/Vehicule__c/fields/TypeVehicule__c.field-meta.xml
<CustomField>
    <fullName>TypeVehicule__c</fullName>
    <label>Type véhicule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Une voiture</fullName>
            </value>
            <value>
                <fullName>Un camion</fullName>
            </value>
            <value>
                <fullName>Moto</fullName>
            </value>
            <value>
                <fullName>Autres cas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>