force-app/main/default/objects/Vehicule__c/fields/Usage__c.field-meta.xml
<CustomField>
    <fullName>Usage__c</fullName>
    <label>Usage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>